@@ -1,6 +1,6 @@
 Package: limpa
-Version: 0.99.8
-Date: 2025-03-22
+Version: 0.99.9
+Date: 2025-03-23
 Title: Quantification and Differential Analysis of Proteomics Data
 Description: Quantification and differential analysis of mass-spectrometry proteomics data, with probabilistic recovery of information from missing values. Estimates the detection probability curve (DPC), which relates the probability of successful detection to the underlying expression level of each peptide, and uses it to incorporate peptide missing values into protein quantification and into subsequent differential expression analyses. The package produces objects suitable for downstream analysis in limma. The package accepts peptide-level data with missing values and produces complete protein quantifications without missing values. The uncertainty introduced by missing value imputation is propagated through to the limma analyses using variance modeling and precision weights. The package name "limpa" is an acronym for "Linear Models for Proteomics Data".
 Authors@R: c(person("Mengbo", "Li",
